--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
     </header>
     <div class="section" id="banner">
         <div class="content-fit">
-            <div class="title" data-before="3.o"> avishkar manthan </div>
+            <div class="title" data-before="3.o"> <img src="./img/inverted_image-removebg-preview (1).png" alt="" style="height: 125px;" class="title">vishkar manthan
+                </div>
+            
         </div>
         <img src="img/flower.png" class="decorate" alt="" style="width: 50vw; bottom: 0; right: 0;">
         <img src="img/leaf.png" class="decorate" alt="" style="width: 30vw; bottom: 0; left: 0;">
     </div>
     <div class="section" id="intro">
         <div class="content-fit">
-            <div class="number">EVENT 01</div>
+            <div class="number"> </div>
             <div class="des">
-                <div class="title">3d animation design for website</div>
+                <div class="title">our MOTIVE </div>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero
                     recusandae quae, aut ratione, incidunt laborum, necessitatibus similique enim doloremque ex.
                     Laudantium obcaecati aspernatur doloremque illo beatae, maxime hic itaque consequatur nisi
@@ -48,7 +50,7 @@
     </div>
     <div class="section" id="description">
         <div class="content-fit">
-            <div class="number">event 02</div>
+            <div class="number">event 01</div>
             <div class="des">
                 <div class="title">-----------</div>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero
@@ -70,7 +72,7 @@
                 <table>
                     <tr>
                         <td>Email</td>
-                        <td>test@gmail.com</td>
+                        <td>shashank@gmail.com</td>
                     </tr>
                     <tr>
                         <td>Phone</td>
