--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="content-fit">
             <div class="number"> </div>
             <div class="des">
-                <div class="title">our MOTIVE </div>
+                <div class="title">OUR MOTIVE </div>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero
                     recusandae quae, aut ratione, incidunt laborum, necessitatibus similique enim doloremque ex.
                     Laudantium obcaecati aspernatur doloremque illo beatae, maxime hic itaque consequatur nisi
