--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shashank Three.JS</title>
+    <title>Shashank Three.js </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -37,7 +37,7 @@
         <div class="content-fit">
             <div class="number"> </div>
             <div class="des">
-                <div class="title">OUR MOTIVE </div>
+                <div class="title">our MOTIVE </div>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero
                     recusandae quae, aut ratione, incidunt laborum, necessitatibus similique enim doloremque ex.
                     Laudantium obcaecati aspernatur doloremque illo beatae, maxime hic itaque consequatur nisi
