--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <div class="number"> </div>
             <div class="des">
                 <div class="title">our MOTIVE </div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero MJ
+                    BHJMHJGSADJGHJFB  IODKLhhjjhsdjgjg jklhhjkwbknkd  uighjwebjnkg cd l l jslh dkn jluih idwld g
                     recusandae quae, aut ratione, incidunt laborum, necessitatibus similique enim doloremque ex.
                     Laudantium obcaecati aspernatur doloremque illo beatae, maxime hic itaque consequatur nisi
                     accusantium veritatis, voluptatem ratione! Placeat numquam nisi reiciendis harum quibusdam tempore
