--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shashank Three.js </title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,16 +30,15 @@
                 </div>
             
         </div>
-        <img src="img/flower.png" class="decorate" alt="" style="width: 50vw; bottom: 0; right: 0;">
-        <img src="img/leaf.png" class="decorate" alt="" style="width: 30vw; bottom: 0; left: 0;">
+        <img src="img/leaf1.png" class="decorate" alt="" style="width: 50vw; bottom: 0; right: 0;">
+        <img src="img/flower.png" class="decorate" alt="" style="width: 30vw; bottom: 0; left: 0;">
     </div>
     <div class="section" id="intro">
         <div class="content-fit">
             <div class="number"> </div>
             <div class="des">
                 <div class="title">our MOTIVE </div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero MJ
-                    BHJMHJGSADJGHJFB  IODKLhhjjhsdjgjg jklhhjkwbknkd  uighjwebjnkg cd l l jslh dkn jluih idwld g
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero
                     recusandae quae, aut ratione, incidunt laborum, necessitatibus similique enim doloremque ex.
                     Laudantium obcaecati aspernatur doloremque illo beatae, maxime hic itaque consequatur nisi
                     accusantium veritatis, voluptatem ratione! Placeat numquam nisi reiciendis harum quibusdam tempore
@@ -56,7 +55,7 @@
                 <div class="title">-----------</div>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptas a porro libero
                     recusandae quae, aut ratione, incidunt laborum, necessitatibus similique enim doloremque ex.
-                    Laudantium obcaecati aspernatur doloremque illo beatae, maxALINEime hic itaque consequatur nisi
+                    Laudantium obcaecati aspernatur doloremque illo beatae, maxime hic itaque consequatur nisi
                     accusantium veritatis, voluptatem ratione! Placeat numquam nisi reiciendis harum quibusdam tempore
                     eaque deleniti accusantium, veniam quae eos sed, asperiores laborum corporis odit mollitia
                     consequatur adipisci? Quibusdam quis eos debitis non esse blanditiis laudantium rerum odit tempora?
@@ -92,6 +91,10 @@
                         <td>@iuceeewbmce</td>
                     </tr>
                 </table>
+                <div class="registerbtn" id="register">
+                    <button onclick="window.location.href='https://github.com/artisticshashank'" id="BTN">REGISTER NOW</button>
+
+                </div>
                 <div class="sign">IUCEE EWB MCE </div>
             </div>
         </div>
